@@ -1,5 +1,9 @@
 2010-08-19  MIYAMUKO Katsuyuki
 
+	* http.l (get-response-text): 非同期実行時は HTTP ステータスが 200 番
+	以外の場合でも例外は投げないようにした。
+	非同期実行の場合は *Trace Output* に警告を出力し nil を返す。
+
 	* util/function.l (tap): デバッグ用の関数。compose の途中にはさんで値を除き見る
 	(funcall (compose '1+ (tap "before 1+") '*  (tap "before *")) 1 2 3)
 
